--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "$",
-    "token": "Your-Discord-Bot-Token"
+    "token": "NDIzMzExNDAyMDg2ODI1OTg0.DYx3Gw.zc_e5DegXKz3yVKtw1PvpAsuEj8"
 }
